# affidavit

./: .gitignore  ACCOMPLISHMENTS_v26614.md  AGENTS.md  ARDPRD.md  CHANGELOG.md  CLAUDE.md  CLNRM_INTEGRATION_EXAMPLES.md  CLNRM_INTEGRATION_PLAN_26.6.14.md  CLNRM_INTEGRATION_README.md  CLNRM_PUBLIC_API_SURFACE.md  CONTRIBUTING.md  Cargo.toml  DOCS_MAXIMALIST.md  DOC_COVERAGE_LOG.md  DOD_ACCEPTANCE_TESTS.md  DOD_PHASE4_OBSERVABILITY.md  DX_QOL_EXECUTIVE_SUMMARY.txt  DX_QOL_INDEX.md  DX_REPORT.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  INTEGRATIONS.md  LSP_MAX_INTEGRATION_ARCHITECTURE.md  LSP_MAX_INTEGRATION_CODE_TEMPLATES.md  LSP_MAX_INTEGRATION_INDEX.md  LSP_MAX_INTEGRATION_QUICK_REFERENCE.md  LSP_MAX_INTEGRATION_SUMMARY.md  PUBLISHING.md  README.md  REPRESENTATION_MAP.md  ROADMAP.md  STATUS.md  WASM4PM_80_20_BREAKDOWN.md  WASM4PM_INDEX.md  WASM4PM_INTEGRATION_PLAN.md  WASM4PM_WITNESS_TEST_TEMPLATES.md  WEBHOOK_IMPLEMENTATION_SUMMARY.md  audit_instructions.txt  deny.toml  gen_thesis.py  (+10 more)
.claude/: settings.json
.devcontainer/: devcontainer.json
.ggen/: sync-state.json
.github/: dependabot.yml  pull_request_template.md
affidavit-core/: .gitignore  AGENTS.md  Cargo.toml  README.md
affidavit-core/src/: chain.rs  digest.rs  lib.rs  verifier.rs
affidavit-core/src/mining/: conformance.rs  footprint.rs  mod.rs  stats.rs
benches/: DELIVERABLES.md  FLAMEGRAPH_GUIDE.md  INDEX.md  QUALITY_WESTERN_ELECTRIC_REPORT.md  README_QUALITY_WESTERN_ELECTRIC.md  TIMING_TABLE.md  check_regression.sh  gen_summary.sh  profile.rs  quality_western_electric.rs  receipt_operations.rs  run_quality_benchmarks.sh  throughput.rs  variance.rs
completions/: affi.bash  affi.fish  affi.nu  affi.ps1  affi.zsh
docs/: INDEX.md  README.md  WESTERN_ELECTRIC_COMPLETE.md  WESTERN_ELECTRIC_INDEX.md  architecture.md  glossary.md
examples/: WEBHOOK_INTEGRATION.md  admission_gate.rs  adversarial_proof.rs  b1_throughput_tests.rs  chain_build.rs  chain_growth.rs  ci_github_actions.yml  ci_gitlab_ci.yml  codegen_maximalist_verbs.rs  conformance_report.rs  discover_shapeb.rs  event_builder.rs  full_pipeline.rs  git_hook_monitor.sh  golden_run.sh  multi_object_receipt.rs  observable_spans.rs  ocel_events.rs  ocel_western_electric_demo.rs  portfolio_monitor_simulation.rs  receipt_determinism.rs  sbom_supply_chain_demo.rs  swarm_monitor.rs  verdict_diagnostics.rs  verify_stages.rs  webhook_slack_integration.rs  western_electric_extended.rs
fixtures/: embedded_registry.json
nexus_reviews/: A2A_nexus_review.md  a2a-rs_nexus_review.md  ai_nexus_review.md  autotel_nexus_review.md  bcinr_nexus_review.md  bitstar_nexus_review.md  bytestar_nexus_review.md  capability-map_nexus_review.md  chatmangpt_nexus_review.md  chicago-tdd-tools_nexus_review.md  citty-test-utils_nexus_review.md  clap-noun-verb_nexus_review.md  claude-desktop-context_nexus_review.md  clawd_nexus_review.md  clawdbot_nexus_review.md  clnrm_nexus_review.md  compiled-cognition-hub_nexus_review.md  cre_nexus_review.md  doctester_nexus_review.md  dogturk_nexus_review.md  dteam_nexus_review.md  erlmcp_nexus_review.md  full-stack-rubric_nexus_review.md  ggen-mcp_nexus_review.md  ggen-spec-kit_nexus_review.md  ggen_nexus_review.md  gitvan_nexus_review.md  insa_nexus_review.md  intvw_nexus_review.md  kgc-sidecar_nexus_review.md  kgn_nexus_review.md  knhk_nexus_review.md  knowd_nexus_review.md  knowtro_nexus_review.md  lsp-max_nexus_review.md  lsp-types-max_nexus_review.md  mcp-mqtt-erl_nexus_review.md  mcpp_nexus_review.md  neako_nexus_review.md  nehemiah-52_nexus_review.md  (+29 more)
ontology/: affi-cli.ttl
praxis/: BROADEN-ACCESS.md  CHECKLIST.md  README.md  apply.sh
reference/: COVERAGE.md
rust-boilerplate/: BROADEN-ACCESS.md  CHECKLIST.md  README.md  apply.sh
rust-boilerplate/crates/chatman-common/: Cargo.toml
rust-boilerplate/crates/chatman-common/src/: cli.rs  lib.rs  provenance.rs  telemetry.rs  testkit.rs
rust-boilerplate/template/: .editorconfig  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cargo.workspace.toml  LICENSE-APACHE  README.md  cargo-generate.toml  justfile  rust-toolchain.toml  rustfmt.toml  typos.toml
rust-boilerplate/template/.github/: dependabot.yml  pull_request_template.md
rust-boilerplate/template/.github/workflows/: ci.yml  release.yml
rust-boilerplate/template/src/: error.rs  lib.rs  main.rs  types.rs
scripts/: bootstrap.sh  check.sh  golden.sh  web-dev.sh
src/: 1000x_auto_remediate_dx.rs  1000x_autonomous_governance.rs  1000x_chaos_e2e.rs  1000x_cli_telepathy_qol.rs  1000x_distributed_sharding.rs  1000x_formal_verification_spec.rs  1000x_gpu_verifier.rs  1000x_holographic_lsp_dx.rs  1000x_nlp_query_qol.rs  1000x_otel_hyper_spec.rs  1000x_post_quantum_sealing.rs  1000x_receipt_to_wasm_qol.rs  1000x_semantic_isomorphism_e2e.rs  1000x_swarm_e2e.rs  1000x_tdd_synthesizer_dx.rs  1000x_time_travel_dx.rs  admission.rs  bench.rs  breed_conformance.rs  catalog.rs  chain.rs  cli.rs  compliance.rs  diag.rs  diff.rs  discovery.rs  doctor_check.rs  error.rs  event_builder.rs  fixture_db.rs  generation.rs  handlers.rs  handlers_stubs.rs  lib.rs  lsp.rs  macros.rs  metrics.rs  mining.rs  model_mining.rs  mutate.rs  (+21 more)
stubs/wasm4pm-compat/: Cargo.toml
stubs/wasm4pm-compat/src/: lib.rs
tests/: 1.3_visualize_tests.rs  1.4_catalog_tests.rs  B.1_throughput_tests.rs  adversarial.rs  chain_edge_cases.rs  chicago_tdd_witness.rs  cli_dispatch.rs  clnrm_witness.rs  compliance_gates.rs  court_law_witness.rs  dx_full_pipeline_e2e.rs  dx_introspect_e2e.rs  dx_verbs_e2e.rs  e2e.rs  e2e_error_cases.rs  ghost_variant_findings.rs  global_e2e_maximalist.rs  golden_output.rs  maximalist_tracing.rs  ocel_quality_integration.rs  (+127 more)
tools/confevo-rs/: .gitignore  Cargo.toml  README.md
tools/confevo-rs/examples/: infeasibility_proof.rs  library_api.rs  raw_breeds.rs  sat_vs_csp.rs  semantic_derive.rs
tools/confevo-rs/src/: evolve.rs  fitness.rs  genome.rs  lib.rs  manifest.rs  report.rs  rng.rs  space.rs
tools/confevo-rs/src/breeds/: csp.rs  encode.rs  json.rs  mod.rs  sat.rs
tools/confevo-rs/tests/: end_to_end.rs  semantic.rs
(+303 files in other folders)
