[package]
name = "affidavit"
version = "26.6.14"
edition = "2021"
description = "Provenance Layer — receipt assembly and certification (verify a witness against a format standard; never decide honesty)."
license = "MIT OR Apache-2.0"
authors = ["Sean Chatman <xpointsh@gmail.com>"]
repository = "https://github.com/anthropics/affidavit"
documentation = "https://docs.rs/affidavit"
readme = "README.md"
keywords = ["provenance", "receipt", "blake3", "verification", "sealed", "ocel", "otel", "wasm4pm", "compliance"]
categories = ["security", "development-tools", "cryptography"]

[[bin]]
name = "affi"
path = "src/bin/affi.rs"

[[bin]]
name = "affi-shell"
path = "src/bin/affi-shell.rs"
required-features = ["shell"]

[lib]
name = "affidavit"
path = "src/lib.rs"

[[bench]]
name = "receipt_operations"
harness = false

[[bench]]
name = "throughput"
path = "benches/throughput.rs"
harness = false
required-features = ["benchmarking"]

[[bench]]
name = "variance"
path = "benches/variance.rs"
harness = false
required-features = ["benchmarking"]

[dependencies]
# --- CORE INFRASTRUCTURE (Always Mandatory) ---
clap-noun-verb = { path = "../clap-noun-verb" }
clap-noun-verb-macros = { path = "../clap-noun-verb/clap-noun-verb-macros" }
linkme = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
anyhow = "1"
thiserror = "2"

# --- FEATURE-GATED ECOSYSTEM INTEGRATIONS ---
# Phase 1: Inspection & catalog
chicago-tdd-tools = { path = "../chicago-tdd-tools", optional = true }
walkdir = { version = "2", optional = true }
glob = { version = "0.3", optional = true }

# Phase 2: Process Discovery & LSP
wasm4pm-compat = { path = "../wasm4pm-compat", optional = true }
wasm4pm = { path = "../wasm4pm/wasm4pm", optional = true }
lsp-max = { path = "../lsp-max", optional = true }

# Phase 3: Mutation & Test Generation
clnrm-core = { path = "../clnrm/crates/clnrm-core", optional = true }
tera = { version = "1", optional = true }
quickcheck = { version = "1", optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }

# Phase 4: Observability (OTel Stack)
opentelemetry = { version = "0.20", features = ["trace", "metrics"], optional = true }
opentelemetry-jaeger = { version = "0.19", optional = true }
opentelemetry-prometheus = { version = "0.13", optional = true }
prometheus = { version = "0.13", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Phase 5: CLI Ergonomics & REPL
rustyline = { version = "12", features = ["derive"], optional = true }
shlex = "1"
tokio = { version = "1", features = ["full"], optional = true }
colored = { version = "2", optional = true }
indicatif = { version = "0.17", optional = true }

# Shared Utils
chrono = { version = "0.4", features = ["serde"], optional = true }
hex = { version = "0.4", optional = true }
rayon = { version = "1", optional = true }
criterion = { version = "0.5", optional = true }
rand = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
trybuild = "1"
criterion = { version = "0.5", features = ["html_reports"] }
quickcheck = "1"
quickcheck_macros = "1"
tokio = { version = "1", features = ["full"] }
chicago-tdd-tools = { path = "../chicago-tdd-tools" }

[features]
default = ["core"]

# Core Provenance (emit, assemble, verify, show, inspect)
# Note: wasm4pm-compat is currently required for admission typestate.
core = ["wasm4pm-compat"]

# Phase 1: Inspection (diff, visualize, catalog)
inspection = ["chicago-tdd-tools", "walkdir", "glob", "colored"]

# Phase 2: Process Discovery (model, conform, predict)
discovery = ["wasm4pm", "chrono", "hex", "core"]
conformance = ["discovery"]
predictive = ["conformance"]
lsp = ["lsp-max", "tokio"]

# Phase 3: Mutation Testing (mutate, generate)
mutation = ["clnrm-core", "tera", "quickcheck", "uuid"]
fixture-db = ["chrono"]

# Phase 4: Observability (trace, metrics, SLO)
otel = ["opentelemetry", "opentelemetry-jaeger", "tracing", "tracing-subscriber"]
metrics = ["otel", "prometheus", "opentelemetry-prometheus"]

# Phase 5: CLI Ergonomics (JSON, REPL, help)
json-output = []
shell = ["rustyline", "tokio"]
ui = ["colored", "indicatif"]

# Extra: Performance & Benchmarking
benchmarking = ["criterion", "rayon"]
profiling = ["benchmarking"]

# COMBINATORIAL MAXIMALISM: The full "dev" environment
all = ["inspection", "discovery", "conformance", "predictive", "lsp", 
       "mutation", "fixture-db", "otel", "metrics", "json-output", 
       "shell", "ui", "benchmarking", "profiling"]

dev = ["all"]
