[package]
name = "affidavit"
version = "26.6.14"
edition = "2021"
rust-version = "1.78"
description = "Provenance Layer — receipt assembly and certification (verify a witness against a format standard; never decide honesty)."
license = "MIT OR Apache-2.0"
authors = ["Sean Chatman <xpointsh@gmail.com>"]
repository = "https://github.com/anthropics/affidavit"
documentation = "https://docs.rs/affidavit"
readme = "README.md"
keywords = ["provenance", "receipt", "blake3", "verification", "sealed", "ocel", "otel", "wasm4pm", "compliance"]
categories = ["security", "development-tools", "cryptography"]

[[bin]]
name = "affi"
path = "src/bin/affi.rs"

[[bin]]
name = "affi-shell"
path = "src/bin/affi-shell.rs"
required-features = ["shell"]

[lib]
name = "affidavit"
path = "src/lib.rs"

[[bench]]
name = "receipt_operations"
harness = false

[dependencies]
# --- CORE INFRASTRUCTURE (Always Mandatory) ---
clap-noun-verb = "26.6"
clap-noun-verb-macros = "26.6"
linkme = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
anyhow = "1"
thiserror = "2"

# --- FEATURE-GATED ECOSYSTEM INTEGRATIONS ---
# Phase 1: Inspection & catalog
chicago-tdd-tools = { version = "26.6", optional = true }
walkdir = { version = "2", optional = true }
glob = { version = "0.3", optional = true }

# Phase 2: Process Discovery & LSP
wasm4pm-compat = { version = "26.6", optional = true }
wasm4pm = { version = "26.6", optional = true }
lsp-max = { version = "26.6", optional = true }

# Phase 3: Mutation & Test Generation
clnrm-core = { version = "1.3", optional = true }
tera = { version = "1", optional = true }
quickcheck = { version = "1", optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }

# Phase 4: Observability (OTel Stack)
opentelemetry = { version = "0.20", features = ["trace", "metrics"], optional = true }
opentelemetry-jaeger = { version = "0.19", optional = true }
opentelemetry-prometheus = { version = "0.13", optional = true }
prometheus = { version = "0.13", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Phase 5: CLI Ergonomics & REPL
rustyline = { version = "12", features = ["derive"], optional = true }
shlex = { version = "1", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
colored = { version = "2", optional = true }
indicatif = { version = "0.17", optional = true }

# Shared Utils
chrono = { version = "0.4", features = ["serde"], optional = true }
hex = { version = "0.4", optional = true }
rayon = { version = "1", optional = true }
criterion = { version = "0.5", optional = true }
rand = { version = "0.8", optional = true }

# GPU Acceleration (1000X)
wgpu = { version = "0.19", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
pollster = { version = "0.3", optional = true }

# 1000X Innovation Hardening
syn = { version = "2", features = ["full", "visit", "extra-traits", "parsing"], optional = true }
quote = { version = "1", optional = true }
proc-macro2 = { version = "1", features = ["span-locations"], optional = true }
tempfile = { version = "3", optional = true }
wasm-encoder = "0.252.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
trybuild = "1"
criterion = { version = "0.5", features = ["html_reports"] }
quickcheck = "1"
quickcheck_macros = "1"
tokio = { version = "1", features = ["full"] }
chicago-tdd-tools = { version = "26.6" }

[features]
# Default feature set
default = ["core"]

# Core Provenance: emit, assemble, verify, show, inspect.
core = ["wasm4pm-compat"]

# Phase 1: Inspection tools (diff, visualize, catalog).
inspection = ["chicago-tdd-tools", "walkdir", "glob", "colored"]

# Phase 2: Process Discovery (model, conform, predict).
discovery = ["wasm4pm", "chrono", "hex", "core"]
# Validates receipts against discovered process models.
conformance = ["discovery"]
# Predicts future events based on current receipt state.
predictive = ["conformance"]
# Enables the Language Server Protocol (LSP) for receipt editing.
lsp = ["lsp-max", "tokio"]

# Phase 3: Mutation Testing and high-volume test generation.
mutation = ["clnrm-core", "tera", "quickcheck", "uuid", "rand"]
# Local storage for test fixtures.
fixture-db = ["chrono"]

# Phase 4: Observability and distributed tracing (OpenTelemetry).
otel = ["opentelemetry", "opentelemetry-jaeger", "tracing", "tracing-subscriber"]
# Metrics collection and Prometheus exporter.
metrics = ["otel", "prometheus", "opentelemetry-prometheus"]

# Phase 5: CLI Ergonomics and interactivity.
# Enables JSON output mode for all CLI verbs.
json-output = []
# Enables the interactive REPL shell.
shell = ["rustyline", "tokio", "shlex"]
# Rich UI elements like progress bars and colors.
ui = ["colored", "indicatif"]

# Extra: Performance & Benchmarking
benchmarking = ["criterion", "rayon"]
# Extended profiling support.
profiling = ["benchmarking"]

# GPU Acceleration for high-throughput verification (1000X).
gpu = ["wgpu", "bytemuck", "pollster"]

# 1000X Innovation Hardening
# Automatic code remediation based on policy violations.
remediation = ["syn", "quote", "proc-macro2", "tempfile"]
# Post-Quantum Cryptography support.
pqc = []

# COMBINATORIAL MAXIMALISM: Enables all optional features.
all = [
    "inspection", 
    "discovery", 
    "conformance", 
    "predictive", 
    "lsp", 
    "mutation", 
    "fixture-db", 
    "otel", 
    "metrics", 
    "json-output", 
    "shell", 
    "ui", 
    "benchmarking", 
    "profiling", 
    "gpu", 
    "remediation", 
    "pqc"
]

# Development environment: alias for 'all'.
dev = ["all"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
