[package]
name = "affidavit"
version = "26.6.22"
edition = "2021"
rust-version = "1.78"
description = "Provenance Layer — receipt assembly and certification (verify a witness against a format standard; never decide honesty)."
license = "MIT OR Apache-2.0"
authors = ["Sean Chatman <xpointsh@gmail.com>"]
repository = "https://github.com/seanchatmangpt/affidavit"
homepage = "https://github.com/seanchatmangpt/affidavit"
documentation = "https://docs.rs/affidavit"
readme = "README.md"
keywords = ["provenance", "receipt", "blake3", "verification", "ocel"]
categories = ["security", "development-tools", "cryptography"]
exclude = [
  "thesis/",
  "praxis/",
  "tools/",
  "web/",
  "wip/",
  "docs/",
  "reference/",
  "ontology/",
  "nexus_reviews/",
  "*.py",
  ".claude/",
  "scripts/",
]

[[bin]]
name = "affi"
path = "src/bin/affi.rs"

[[bin]]
name = "affi-shell"
path = "src/bin/affi-shell.rs"
required-features = ["shell"]

[lib]
name = "affidavit"
path = "src/lib.rs"

[[example]]
name = "verdict_diagnostics"
required-features = ["lsp"]

[[example]]
name = "full_pipeline"
required-features = ["lsp"]

[[example]]
name = "discover_shapeb"
required-features = ["discovery"]

[[bench]]
name = "receipt_operations"
harness = false
required-features = ["discovery"]

[[bench]]
name = "quality_western_electric"
harness = false
required-features = ["quality-monitor"]

[dependencies]
# --- CORE INFRASTRUCTURE (Always Mandatory) ---
clap-noun-verb = "26.6"
clap-noun-verb-macros = "26.6"
linkme = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
anyhow = "1"
thiserror = "2"
walkdir = "2"
regex = "1"

# --- FEATURE-GATED ECOSYSTEM INTEGRATIONS ---
# Phase 1: Inspection & catalog
chicago-tdd-tools = { version = "26.6", optional = true }
glob = { version = "0.3", optional = true }

# Phase 2: Process Discovery & LSP
wasm4pm-compat = { version = "26.6", optional = true }
wasm4pm = { version = "26.6", optional = true }
lsp-max = { version = "26.6", optional = true }
notify = { version = "6", optional = true }

# Phase 3: Mutation & Test Generation
clnrm-core = { version = "1.3", optional = true }
tera = { version = "1", optional = true }
quickcheck = { version = "1", optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }

# Phase 4: Observability (OTel Stack)
opentelemetry = { version = "0.20", features = ["trace", "metrics"], optional = true }
opentelemetry-jaeger = { version = "0.19", optional = true }
opentelemetry-prometheus = { version = "0.13", optional = true }
prometheus = { version = "0.13", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Phase 5: CLI Ergonomics & REPL
rustyline = { version = "12", features = ["derive"], optional = true }
shlex = { version = "1", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
colored = { version = "2", optional = true }
indicatif = { version = "0.17", optional = true }

# Phase 2: Webhook sink for quality violations
reqwest = { version = "0.11", features = ["json"], optional = true }

# Shared Utils
chrono = { version = "0.4", features = ["serde"], optional = true }
hex = { version = "0.4", optional = true }
rayon = { version = "1", optional = true }
criterion = { version = "0.5", optional = true }
rand = { version = "0.8", optional = true }

# GPU Acceleration (1000X)
wgpu = { version = "29.0", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
pollster = { version = "0.3", optional = true }

# 1000X Innovation Hardening
syn = { version = "2", features = ["full", "visit", "extra-traits", "parsing"], optional = true }
quote = { version = "1", optional = true }
proc-macro2 = { version = "1", features = ["span-locations"], optional = true }
tempfile = { version = "3", optional = true }
wasm-encoder = "0.252.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
trybuild = "1"
criterion = { version = "0.5", features = ["html_reports"] }
quickcheck = "1"
quickcheck_macros = "1"
tokio = { version = "1", features = ["full"] }
chicago-tdd-tools = { version = "26.6" }
wasm4pm = { version = "26.6" }
wasm4pm-compat = { version = "26.6", features = ["full"] }
clnrm-core = { version = "1.3" }

[features]
# Default feature set
default = ["core"]

# Core Provenance: emit, assemble, verify, show, inspect.
core = ["wasm4pm-compat"]

# Phase 1: Inspection tools (diff, visualize, catalog).
inspection = ["chicago-tdd-tools", "glob", "colored"]

# Phase 2: Process Discovery (model, conform, predict).
discovery = ["wasm4pm", "chrono", "hex", "core"]
# Validates receipts against discovered process models.
conformance = ["discovery"]
# Predicts future events based on current receipt state.
predictive = ["conformance"]
# Enables the Language Server Protocol (LSP) for receipt editing.
lsp = ["lsp-max", "tokio"]
# Enables continuous file-watching daemon (Phase 2).
file-watch = ["notify", "shell", "tokio"]

# Phase 3: Mutation Testing and high-volume test generation.
mutation = ["clnrm-core", "tera", "quickcheck", "uuid", "rand"]
# Local storage for test fixtures.
fixture-db = ["chrono"]

# Phase 4: Observability and distributed tracing (OpenTelemetry).
otel = ["opentelemetry", "opentelemetry-jaeger", "tracing", "tracing-subscriber"]
# Metrics collection and Prometheus exporter.
metrics = ["otel", "prometheus", "opentelemetry-prometheus"]

# Phase 5: CLI Ergonomics and interactivity.
# Enables JSON output mode for all CLI verbs.
json-output = []
# Enables the interactive REPL shell.
shell = ["rustyline", "tokio", "shlex"]
# Rich UI elements like progress bars and colors.
ui = ["colored", "indicatif"]

# Extra: Performance & Benchmarking
benchmarking = ["criterion", "rayon"]
# Extended profiling support.
profiling = ["benchmarking"]

# GPU Acceleration for high-throughput verification (1000X).
gpu = ["wgpu", "bytemuck", "pollster"]

# 1000X Innovation Hardening
# Automatic code remediation based on policy violations.
remediation = ["syn", "quote", "proc-macro2", "tempfile"]
# Post-Quantum Cryptography support.
pqc = []

# Quality monitoring with Western Electric rules
quality-monitor = ["syn", "quote", "shell", "tokio"]

# Phase 2: Webhook sink for quality violations (POST violations to external service)
webhook = ["reqwest", "shell", "tokio"]

# COMBINATORIAL MAXIMALISM: Enables all optional features.
all = [
    "inspection",
    "discovery",
    "conformance",
    "predictive",
    "lsp",
    "file-watch",
    "mutation",
    "fixture-db",
    "otel",
    "metrics",
    "json-output",
    "shell",
    "ui",
    "benchmarking",
    "profiling",
    "gpu",
    "remediation",
    "pqc",
    "quality-monitor",
    "webhook"
]

# Development environment: alias for 'all'.
dev = ["all"]

[patch.crates-io]
# All three crates are patched locally because:
#
# wasm4pm / wasm4pm-compat — both use `#![feature(const_trait_impl)]`, which
# is broken on the nightly toolchain pinned in rust-toolchain.toml.  The real
# repos are seanchatmangpt/wasm4pm and (wasm4pm-compat lives on crates.io).
# Swap back once upstream pins a nightly that stabilises const-trait.
#
# clnrm-core — version "1.3" in Cargo.toml vs "26.5.x" upstream.  The real
# repo (seanchatmangpt/clnrm) pulls in surrealdb, async-graphql, and 300+
# transitive deps, inflating Cargo.lock for an optional feature (mutation)
# that is not enabled in the default build.  Swap to git once the version
# requirement is aligned or the feature is promoted to default.
wasm4pm-compat = { path = "stubs/wasm4pm-compat" }
wasm4pm = { path = "stubs/wasm4pm" }
clnrm-core = { path = "stubs/clnrm-core" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
