[package]
name = "affidavit-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "Zero-dependency, no_std, forbid(unsafe) reference verifier for affidavit receipt chains: make invalid receipts unrepresentable and verify them anywhere."
license = "MIT OR Apache-2.0"
authors = ["Sean Chatman <xpointsh@gmail.com>"]
repository = "https://github.com/seanchatmangpt/affidavit"
keywords = ["provenance", "receipt", "verification", "no-std", "sealed"]
categories = ["no-std", "cryptography", "development-tools"]
readme = "README.md"

[features]
default = ["alloc"]
# Enables the owned ChainBuilder/Receipt. The *verifier* itself needs no
# allocation and works with `default-features = false`.
alloc = []

# NOTE: there is intentionally no [dependencies] section. That is the whole
# point — a trust-critical verifier with ZERO supply-chain surface, so it cannot
# be broken by a bad upstream crate the way the sibling `affidavit` crate
# currently is (its build is blocked by wasm4pm-compat 26.6.13).

# Standalone workspace root: isolates this crate from any ancestor directory so
# it builds and tests even though the sibling `affidavit` crate cannot.
[workspace]
