[package]
name = "chatman-common"
version = "26.6.0"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
authors = ["Sean Chatman <xpointsh@gmail.com>"]
repository = "https://github.com/seanchatmangpt/chatman-common"
description = "Shared house crate for the seanchatmangpt Rust fleet"
keywords = ["common", "utilities", "provenance", "telemetry", "cli"]

[workspace]

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
blake3 = { version = "1", optional = true }
tempfile = { version = "3", optional = true }
clap = { version = "4", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
telemetry = ["dep:tracing", "dep:tracing-subscriber"]
otel = ["telemetry"]
cli = ["dep:clap", "telemetry", "dep:serde", "dep:serde_json"]
provenance = ["dep:blake3"]
testkit = ["dep:tempfile"]
full = ["serde", "telemetry", "cli", "provenance", "testkit"]
